# 2a7-smart-shopping-center

./: .windsurfrules  Atelier_Connexion.pro.user.9e8cf6b  CMakeLists.txt  CMakeLists.txt.user.65116ec  CMakeLists.txt.user.9e8cf6b  DimensionsDialog.ui  IMG - Copie.qrc  IMG.qrc  INTEGRATION.pro  INTEGRATION.pro.user.65116ec  INTEGRATION.pro.user.9cdda36  README.md  arduino.cpp  arduino.h  arduinocommunication.cpp  arduinocommunication.h  cameradialog.cpp  cameradialog.h  chatmanager.cpp  chatmanager.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  clickablerectitem.cpp  clickablerectitem.h  compare_faces.py  connection.cpp  connection.h  connexion.cpp  dialog.cpp  dialog.h  dialog.ui  dimensionsdialog.cpp  dimensionsdialog.h  dimensionsdialog.ui  employe.cpp  employe.h  espace.cpp  espace.h  espace.pro  (+47 more)
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QEvent.11D26C576C14EE9F.idx  QFuture.5129F96BDE8AB559.idx  QMap.CCA09014857D852B.idx  QPropertyAnimation.A7969D7E2E615B28.idx  QSqlTableModel.B283C17C3E8D877B.idx  QTabBar.3E56A8CC074F642F.idx  calendrier.cpp.64552FFFED63287B.idx  calendrier.cpp.D54A6487C052CCC9.idx  calendrier.h.AA27BB025D9A629F.idx  calendrier.h.C0A571870E00FA1D.idx  connexion.cpp.418B3855F70EDCA0.idx  connexion.cpp.9344B1DBF0A0DC94.idx  connexion.h.761F2F6A0833AE10.idx  connexion.h.C072A8BD8BFA53BF.idx  dialog.cpp.3D4DD265B9AAC3BD.idx  dialog.cpp.666E05870040C62B.idx  dialog.h.2843232D252BE8A9.idx  dialog.h.5885A490CC08F1C1.idx  event.cpp.59D549E6B6609479.idx  event.cpp.A070236C3D2814A0.idx  event.h.C292B9E731E1D89D.idx  event.h.D62AFDA1BCBC9E51.idx  main.cpp.895FF894181376FC.idx  main.cpp.AD65087DF8C668CA.idx  mainwindow.cpp.26AFBD52B56CEDCB.idx  mainwindow.cpp.FBD430DDA837DBFC.idx  mainwindow.h.530A1DD473A81B0A.idx  mainwindow.h.C952D73F2C5CF721.idx  openaiclient.cpp.10DF174F464651E7.idx  openaiclient.cpp.9A6E3BCA84CBE544.idx  openaiclient.h.8AFE22C6DAAB7B36.idx  openaiclient.h.C0D14C8A1251BCF1.idx  q20map.h.8FEB132AA4774279.idx  q20vector.h.0EF641D2A48ACF03.idx  qabstractitemmodel.h.19C8AB068811F23A.idx  qabstractscrollarea.h.05FED5DEF7444F33.idx  qapplicationstatic.h.3AC6E2C10541266D.idx  qcache.h.6F2ABD42AD0444AD.idx  qcborstreamreader.h.011225DFC0B96C35.idx  qdeadlinetimer.h.AC30E503EC36E233.idx  (+37 more)
img/: export.sql
img/jsp/: dl_settings.xml
img/jsp/datatypes/: DDLSelection.local  Diagrams.local  Objects.local
img/jsp/logical/: Diagrams.local
img/jsp/rel/8BE761B6-91988B4D427B/: DDLSelection.local  Diagrams.local  Objects.local
img/jsp/rel/8BE761B6-91988B4D427B/phys/32076570-BF29817DFF70/: DDLSelection.local  Objects.local
